dbeaver/pro#7020 History navigation fix